interpreter_source_code/grammer.txt
program        → declaration* EOF ;

declaration    → funDecl
               | varDecl
               | classDecl
               | statement ;

classDecl     -> "class" IDENTIFIER "{"
                (constructer)?
                (classMembers)* "}";

classMembers  -> funDecl | varDecl ;

varDecl        → "var" IDENTIFIER ( "=" expression )? ";" ;

funDecl        → "func" function ;
function       → IDENTIFIER "(" parameters? ")" block ;
parameters     → IDENTIFIER ( "," IDENTIFIER )* ;

statement      → exprStmt
               | ifStmt
               | printStmt
               | returnStmt
               | breakStmt
               | returnStmt
               | whileStmt
               | matchStmt
               | block ;

returnStmt     → "return" expression? ";" ;
continueStmt   → "continue" ";"
breakStmt      → "break" ";"

exprStmt       → expression ";" ;
ifStmt         → "if" expression "then" statement
                ("elif" expression "then statement)*
               ( "else" statement )? ;
printStmt      → "print" expression ";"
               | "println" expression ";" ;
whileStmt      → "while" expression "do" statement ;

matchStmt      → "match" expression "with"
               ("case" expression "->" statement)*
               ("else" "->" statement)? ;

block          → "{" declaration* "}" ;

expression     → assignment ;
assignment     → IDENTIFIER "=" assignment
               | logic_or ;
lambda         → "lamda" (parameters)? "->" expression ;
ternary        → expression "if" expression "else" expression ;
logic_or       → logic_and ( "or" logic_and )* ;
logic_and      → equality ( "and" equality )* ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" | "%" ) unary )* ;
unary          → ( "!" | "-" ) unary | call ;
call           → primary ( "(" arguments? ")" )* ;
member_accsses → IDENTIFIER ("." IDENTIFIER)*
arguments      → expression ( "," expression )* ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")"
               | IDENTIFIER
               | index
               | ListLiteral

index          → (list | string) "[" expression "]"

ListLiteral    → "[" (ListContents)? "]" ;
ListContents   →  expression ("," expression)* ;
