interpreter_source_code/Parser.java
import java.util.AbstractMap;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.LinkedHashMap;
import java.util.List;

public class Parser{
    int pos = 0;
    Token current;
    ArrayList<Token> tokens = new ArrayList<>();
    Runtime lang;

    Parser(ArrayList<Token> tokens, Runtime lang){
        this.tokens = tokens;
        this.lang = lang;
        pos = 0;
        current = tokens.get(0);
    }

    List<Stmt> parse(){
        List<Stmt> statements = new ArrayList<>();
        while( ! currentIs(TokenType.EOF)){
            statements.add(declaration());
        }

        return statements;
    }


    ///Helper parsing methods///
    
    Stmt declaration(){
        if(currentIs(TokenType.VAR)){
            advance();
            return varDeclaration();
        }

        else if(currentIs(TokenType.FUNC)){
            advance();
            return function();
        }

        else if(currentIs(TokenType.CLASS)){
            advance();
            return classDeclaration();
        }

        else if(currentIs(TokenType.ENUM)){
            advance();
            return enumDeclaration();
        }

        else if(currentIs(TokenType.IMPORT)){
            return importDeclaration();
        }
            

        return statement();
    }

    Stmt importDeclaration(){
        Token keyword = current;
        advance();
        if( ! currentIs(TokenType.STRING))
            Runtime.error("expected file path after 'import' keyword", current.line, current.file_name);
        String path = (String) current.value;
        advance();
        Token identifier = null;
        if(currentIs(TokenType.AS)){
            advance();
            if( ! currentIs(TokenType.IDENTIFIER))
                Runtime.error("expected identifier after 'as' keyword", current.line, current.file_name);
            identifier = current;
            advance();
        }
        return new Import(keyword, path, identifier, lang);
    }

    Stmt enumDeclaration(){
        if( ! currentIs(TokenType.L_CUR))
            Runtime.error("expected '{' after enum keyword", current.line, current.file_name);
        Token keyword = current;
        advance();

        if( ! currentIs(TokenType.IDENTIFIER))
            Runtime.error("expected at least 1 identifier inside enum body", current.line, current.file_name);
        var identfiers = new ArrayList<Token>();
        identfiers.add(current);
        advance();

        while(currentIs(TokenType.COMMA)){
            advance();
            if( ! currentIs(TokenType.IDENTIFIER))
                Runtime.error("expected identfier after ','", current.line, current.file_name);
            identfiers.add(current);
            advance();
        }
        if( ! currentIs(TokenType.R_CUR))
            Runtime.error("expected closing '}' after enum body", current.line, current.file_name);
        advance();

        return new EnumDecl(keyword, identfiers, lang);


    }

    Stmt classDeclaration(){
        if( ! currentIs(TokenType.IDENTIFIER))
            Runtime.error("Expected identifier after 'class' keyword", current.line - 1, current.file_name);
        Token name = current;
        advance();

        if( ! currentIs(TokenType.L_PAR))
            Runtime.error("Expected '(' after class name", name.line, current.file_name);
        advance();

        List<Token> parameters = parameters();

        if( ! currentIs(TokenType.L_CUR))
            Runtime.error("Expected '{' after class name", current.line - 1, current.file_name);
        advance();

        List<Stmt> classBody = new ArrayList<>();
        Function to_string = null;
        Function eq = null;
        Function call = null;

        while (currentIs(TokenType.FUNC, TokenType.VAR)){
            if(currentIs(TokenType.FUNC)){
                advance();
                Function method = (Function) function();
                // Check if __str__():
                if(method.name.value.equals("__str__"))
                    to_string = method;
                // Check if __eq__():
                else if(method.name.value.equals("__eq__"))
                    eq = method;
                else if(method.name.value.equals("__call__"))
                    call = method;
                else
                    classBody.add(method);
            }

            else if(currentIs(TokenType.VAR)){
                advance();
                classBody.add(varDeclaration());
            }
        }

        if( ! currentIs(TokenType.R_CUR))
            Runtime.error("Expected '}' after class '" + name.value + "' body", name.line, name.file_name);
        advance();

        return new ClassDeclre(classBody, name, parameters, to_string, eq, call, lang);
    }


    Stmt function(){
        if( ! currentIs(TokenType.IDENTIFIER))
            Runtime.error("Expected identifier after 'func' keyword", current.line, current.file_name);
        Token name = current;
        advance();

        if( ! currentIs(TokenType.L_PAR))
            Runtime.error("Expected '(' after function name", name.line, name.file_name);
        advance();

        List<Token> parameters = parameters();

        // optional Return type hint:-
        if(currentIs(TokenType.ARROW)){
            advance();
            if( ! currentIs(TokenType.IDENTIFIER) && ! currentIs(TokenType.NIL))
                Runtime.error("expected data type after '->'", current.line, current.file_name);
            advance();
        }

        if( ! currentIs(TokenType.L_CUR))
            Runtime.error("Expected '{' before function body", current.line -1, current.file_name);
        advance();

        List<Stmt> body = block();

        return new Function(name, parameters, body, lang);


    }

    List<Token> parameters(){
        var parameters = new ArrayList<Token>();
        if( ! currentIs(TokenType.R_PAR)){
            if( ! currentIs(TokenType.IDENTIFIER))
                Runtime.error("Expected parameter name", current.line, current.file_name);
            parameters.add(current);
            advance();
            // Check for type hint:
            if(currentIs(TokenType.COLON)){
                advance();
                if( ! currentIs(TokenType.IDENTIFIER))
                    Runtime.error("Expected data type after ':'", current.line, current.file_name);
                advance();
            }
            while(currentIs(TokenType.COMMA)){
                advance();
                if( ! currentIs(TokenType.IDENTIFIER))
                    Runtime.error("Expected parameter name", current.line, current.file_name);
                parameters.add(current);
                advance();
                // Check for type hint
                if(currentIs(TokenType.COLON)){
                    advance();
                    if( ! currentIs(TokenType.IDENTIFIER))
                        Runtime.error("Expected data type after ':'", current.line, current.file_name);
                    advance();
                }
            }

            if(parameters.size() >= 255)
                Runtime.error("Can't have more than 255 parameters", current.line, current.file_name);
                
        }

        if( ! currentIs(TokenType.R_PAR))
            Runtime.error("Expected closing ')'", current.line, current.file_name);
        advance();

        return parameters;
    }

    Stmt varDeclaration(){
        if( ! currentIs(TokenType.IDENTIFIER))
            Runtime.error("expected identifier after var keyword", current.line, current.file_name);
        Token varName = current;
        advance();

        // Optional type hint:
        if(currentIs(TokenType.COLON)){
            advance();
            if( ! currentIs(TokenType.IDENTIFIER))
                Runtime.error("expected data type after ':'", current.line, current.file_name);
            advance();
        }

        // Optional varibale initializer:
        Expre initializer = null;
        if(currentIs(TokenType.EQUALS)){
            advance();
            initializer = expression();
        }

        if( ! currentIs(TokenType.EOS))
            Runtime.error("expected ';' after end of statement", current.line - 1, current.file_name);
        advance();

        return new VarDeclare(varName, initializer, lang);
        
    }
    
    Stmt statement(){
        if(currentIs(TokenType.PRINT, TokenType.PRINT_LN)){
            return printStatement();
        }

        else if(currentIs(TokenType.IF)){
            advance();
            return ifStatement();
        }

        else if(currentIs(TokenType.WHILE)){
            advance();
            return whileStatement();
        }

        else if(currentIs(TokenType.FOR)){
            advance();
            return forStmt();
        }

        else if (currentIs(TokenType.L_CUR)){
            advance();
            return new Block(block(), lang);
        }

        else if(currentIs(TokenType.RETURN))
            return returnStatement();
        
        else if(currentIs(TokenType.CONTINUE))
            return continueStmt();

        else if(currentIs(TokenType.BREAK))
            return breakStmt();
        
        else if(currentIs(TokenType.MATCH))
            return matchStmt();
        

        return expresionStatement();
    }

    Stmt forStmt(){

        if( ! currentIs(TokenType.IDENTIFIER))
            Runtime.error("expected identfier after 'for' keyword", current.line, current.file_name);
        Token forVar = current;
        Token secondForVar = null;
        advance();

        // for thing, otherThing in iterable...
        if(currentIs(TokenType.COMMA)){
            advance();
            if( ! currentIs(TokenType.IDENTIFIER))
                Runtime.error("expected identfier after ','", current.line, current.file_name);
            secondForVar = current;
            advance();
        }

        if( ! currentIs(TokenType.IN))
            Runtime.error("expected 'in' keyword after identfier", current.line, current.file_name);
        advance();

        Expre iterable = expression();

        if( ! currentIs(TokenType.DO))
            Runtime.error("expected 'do' keyword after iterable", current.line, current.file_name);
        advance();
        Stmt body = statement();

        return new For(forVar, iterable, body, secondForVar, lang);
    }

    Stmt matchStmt(){
        Token keyword = current;
        advance();
        Expre mainExpre = expression();
        if( ! currentIs(TokenType.WITH))
            Runtime.error("expected 'with' keyword after match expression", current.line, current.file_name);
        advance();

        LinkedHashMap<Expre, Stmt> branches = new LinkedHashMap<>();

        while (currentIs(TokenType.CASE)) {
            advance();
            Expre condition = expression();
            if( ! currentIs(TokenType.ARROW))
                Runtime.error("expected '->' after match case", current.line, current.file_name);
            advance();
            Stmt branch = statement();
            branches.put(condition, branch);
        }

        Stmt elseBranch = null;
        if(currentIs(TokenType.ELSE)){
            advance();
            if( ! currentIs(TokenType.ARROW))
                Runtime.error("expected '->' after else match case", current.line, current.file_name);
            advance();
            elseBranch = statement();
        }

        return new Match(keyword, mainExpre, branches, elseBranch);

    }

    Stmt breakStmt(){
        Token keyword = current;
        advance();
        if( ! currentIs(TokenType.EOS))
            Runtime.error("Expected ';' after break statement", keyword.line, keyword.file_name);
        advance();

        return new Break(keyword);
    }

    Stmt continueStmt(){
        Token keyword = current;
        advance();
        if( ! currentIs(TokenType.EOS))
            Runtime.error("Expected ';' after continue statement", keyword.line, keyword.file_name);
        advance();

        return new Continue(keyword);
    }

    Stmt returnStatement(){
        Token keyword = current;
        advance();
        Expre value = null;
        if ( ! currentIs(TokenType.EOS))
            value = expression();
        
        if( ! currentIs(TokenType.EOS))
            Runtime.error("Expected ';' after return statement", keyword.line, keyword.file_name);
        
        advance();

        return new Return(keyword, value);
        
    }

    Stmt whileStatement(){
        Expre condition = expression();
        if( ! currentIs(TokenType.DO))
            Runtime.error("expected 'do' keyword after while condition", current.line, current.file_name);
        advance();
        Stmt body = statement();

        return new While(condition, body, lang);
    }

    Stmt ifStatement(){

        LinkedHashMap<Expre, Stmt> branches = new LinkedHashMap<>();

        Expre condition = expression();
        if( ! currentIs(TokenType.THEN))
            Runtime.error("expected 'then' keyword after if condition", current.line, current.file_name);
        advance();
        Stmt thenBranch = statement();
        branches.put(condition, thenBranch);

        while (currentIs(TokenType.ELIF)) {
            advance();
            condition = expression();
            if( ! currentIs(TokenType.THEN))
                Runtime.error("expected 'then' keyword after elif condition", current.line, current.file_name);
            advance();
            thenBranch = statement();
            branches.put(condition, thenBranch);
        }

        Stmt elseBranch = null;
        if(currentIs(TokenType.ELSE)){
            advance();
            elseBranch = statement();
        }
        return new If(branches, elseBranch);
    }

    List<Stmt> block(){
        List<Stmt> statements = new ArrayList<>();
        Token blockStart = tokens.get(pos - 1);

        while( ! currentIs(TokenType.R_CUR))
            statements.add(declaration());
        
        if( ! currentIs(TokenType.R_CUR))
            Runtime.error("Expected '}' after block.", blockStart.line, blockStart.file_name);
        
        advance();

        return statements;

    }

    Stmt printStatement(){
        Token print_type = current;
        advance();
        Expre value = expression();
        if( ! current.type.equals(TokenType.EOS)){
            if(print_type.line == current.line){
                // The user probably wanted to concatenate strings but forgot the '+':
                Runtime.error("Expected closing ';' to end print statement\nReminder: you must use '+' to print multiple things", current.line, current.file_name);
            }
            Runtime.error("Expected closing ';' to end print statement", current.line - 1, current.file_name);
        }
            
        advance();
        return new Print(value, print_type);
        
    }

    Stmt expresionStatement(){
        Expre expre = expression();
        if( ! current.type.equals(TokenType.EOS))
            Runtime.error("Expected closing ';' to end statement", current.line - 1, current.file_name);
        advance();
        return new ExpressionStmt(expre);
    }
    
    
    Expre expression(){
        return assignment();
    }

    Expre assignment(){
        Expre expre = lambda();

        if(currentIs(TokenType.EQUALS, TokenType.PLUS_EQUAL, TokenType.MINUS_EQUAL,
        TokenType.MULTIPLY_EQUAL, TokenType.DIVIDE_EQUAL, TokenType.MOD_EQUAL)){
            Token opp = current;
            advance();
            Expre newValue = assignment();

            if(expre instanceof Variable){
                Token varName = ( (Variable) expre ).token;
                return new Assignment(varName, newValue, opp, lang);
            }

            else if(expre instanceof Get){
                Get memberToChange = (Get) expre;
                return new Set(memberToChange, newValue, opp, lang);
            }

            else if(expre instanceof Subscript)
                return new SubscriptAssign( (Subscript) expre, newValue, opp, lang);
            

            Runtime.error("Invalid assignment target", opp.line, opp.file_name);

        }

        return expre;
    }

    Expre lambda(){

        if (currentIs(TokenType.LAMBDA)){
            Token keyword = current;
            advance();
            
            // See if there's parameters:
            List<Token> parameters = new ArrayList<>();

            if( ! currentIs(TokenType.ARROW)){
                if( ! currentIs(TokenType.IDENTIFIER))
                    Runtime.error("Expected parameter name after lambda delaration", current.line, current.file_name);
                parameters.add(current);
                advance();
                while(currentIs(TokenType.COMMA)){
                    advance();
                    if( ! currentIs(TokenType.IDENTIFIER))
                        Runtime.error("Expected parameter name", current.line, current.file_name);
                    parameters.add(current);
                    advance();
                }

                if(parameters.size() >= 255)
                    Runtime.error("Can't have more than 255 parameters", current.line, current.file_name);
                    
            }

            if( ! currentIs(TokenType.ARROW))
                Runtime.error("Expected closing '->' after lambda parameters", current.line, current.file_name);
            advance();

            Expre body = expression();

            return new Lambda(keyword, parameters, body, lang);
        }
        

        return ternary();

    }

    Expre ternary(){

        Expre left = or();

        if(currentIs(TokenType.IF)){
            Token keyword = current;
            advance();
            Expre middle = expression();
            if(! currentIs(TokenType.ELSE))
                Runtime.error("expected else after ternary expression condition", current.line, current.file_name);
            advance();
            Expre right = expression();
            left = new Ternary(left, middle, right, keyword);
        }


        return left;


    }

    Expre or(){
        Expre expre = and();
        while (currentIs(TokenType.OR)) {
            Token opToken = current;
            advance();
            Expre right = and();
            expre = new BinBoolOp(expre, opToken, right);
        }

        return expre;
    }

    Expre and(){
        Expre expre = equality();
        while (currentIs(TokenType.AND)) {
            Token opToken = current;
            advance();
            Expre right = equality();
            expre = new BinBoolOp(expre, opToken, right);
        }

        return expre;
    }

    Expre equality(){
        Expre expre = comparison();

        while(currentIs(TokenType.DOUBLE_EQUAL, TokenType.NOT_EQUAL)){
            Token opToken = current;
            advance();
            Expre right = comparison();
            expre = new BinOp(expre, opToken, right, lang);
        }

        return expre;
    }

    Expre comparison(){
        Expre expre = term();

        while(currentIs(TokenType.GREATER_THAN, TokenType.GREATER_THAN_OR_EQUAL, TokenType.LESS_THAN, TokenType.LESS_THAN_OR_EQUAL)){
            Token opToken = current;
            advance();
            Expre right = term();
            expre = new BinOp(expre, opToken, right, lang);
        }

        return expre;
    }

    Expre term(){
        Expre expre = factor();

        while (currentIs(TokenType.PLUS, TokenType.MINUS)) {
            Token opToken = current;
            advance();
            Expre right = factor();
            expre = new BinOp(expre, opToken, right, lang);
        }
        return expre;
    }
    
    Expre factor(){
        Expre expre = unary();

        while(currentIs(TokenType.MULTIPLY, TokenType.DIVIDE, TokenType.MOD)){
            Token opToken = current;
            advance();
            Expre right = unary();
            expre = new BinOp(expre, opToken, right, lang);
        }

        return expre;
    }

    Expre unary(){
        if(currentIs(TokenType.NOT, TokenType.MINUS)){
            Token opToken = current;
            advance();
            Expre right = unary();
            return new UnaryOp(right, opToken);
        }

        return call_subscript_get();
    }

    Expre call_subscript_get(){
        Expre expre = primary();
        while(currentIs(TokenType.L_PAR, TokenType.L_BRACKET, TokenType.DOT)){
            switch(current.type){
                case L_PAR ->{
                    advance();
                    expre = finishCall(expre);
                }
                case L_BRACKET -> {
                    Token bracket = current;
                    advance();
                    Expre index = expression();
                    if(! currentIs(TokenType.R_BRACKET))
                        Runtime.error("Expected closing ']' to end index", bracket.line, bracket.file_name);
                    advance();
                    expre = new Subscript(bracket, expre, index, lang);
                }
                case DOT -> {
                    Token dot = current;
                    advance();
                    if( ! currentIs(TokenType.IDENTIFIER))
                        Runtime.error("Expected identifier after '.'", dot.line, dot.file_name);
                    Token member = current;
                    advance();
                    expre = new Get(expre, dot, member, lang);
                }
                default -> {
                    // Unreachable:
                    return null;
                }
                
            }
        }

        return expre;
    }

    Expre finishCall(Expre callee){
        List<Expre> arguments = new ArrayList<>();

        // No args found:
        if(currentIs(TokenType.R_PAR)){
            advance();
            return new Call(callee, current, arguments, lang);
        }

        Expre arg = expression();
        arguments.add(arg);
        while(currentIs(TokenType.COMMA)){

            if(arguments.size() >= 255)
                Runtime.error("Can't have more than 255 args !", current.line, current.file_name);

            advance();
            arg = expression();
            arguments.add(arg);
        }

        if( ! currentIs(TokenType.R_PAR))
            Runtime.error("Expected ')' to close call.", current.line, current.file_name);
        advance();

        return new Call(callee, current, arguments, lang);
    }

    Expre primary(){
        Token tok = current;
        TokenType curType = current.type;

        if(curType.equals(TokenType.TRUE)){
            advance();
            return new Literal(tok, true, lang);
        }
        else if(curType.equals(TokenType.FALSE)){
            advance();
            return new Literal(tok, false, lang);
        }
        else if(curType.equals(TokenType.NIL)){
            advance();
            return new Literal(tok, null, lang);
        }

        else if(currentIs(TokenType.Double, TokenType.STRING)){
            advance();
            return new Literal(tok, tok.value, lang);
        }
            
        else if(currentIs(TokenType.IDENTIFIER)){
            advance();
            return new Variable(tok, lang);
        }
        
        else if(curType.equals(TokenType.L_PAR)){
            advance();
            Expre expre = expression();
            if( ! current.type.equals(TokenType.R_PAR))
                Runtime.error("Expected closing ')' !", current.line, current.file_name);
            advance();
            return new Grouping(expre);
        }

        else if(curType.equals(TokenType.L_BRACKET)){
            Token token = current;
            advance();
            List<Expre> listContents = new ArrayList<>();
            if(! currentIs(TokenType.R_BRACKET))
                listContents.add(expression());
            while( ! currentIs(TokenType.R_BRACKET)){
                if( ! currentIs(TokenType.COMMA))
                    Runtime.error("Expected ',' between list elements", current.line, current.file_name);
                advance();
                listContents.add(expression());
            }
            advance();
            return new ListLiteral(token, listContents, lang);
        }

        else if(curType.equals(TokenType.L_CUR)){
            Token token = current;
            advance();
            HashMap<Expre, Expre> hashMap;
            if( ! currentIs(TokenType.R_CUR)){
                hashMap = dict_contents(token);
                return new DictLiteral(token, hashMap, lang);
            }
            else if(currentIs(TokenType.R_CUR)){
                advance();
                return new DictLiteral(token, new HashMap<>(), lang);
            }
        }

        Runtime.error("Invalid syntax !", current.line, current.file_name);
        return null;
    }

    HashMap<Expre, Expre> dict_contents(Token tok){

        AbstractMap.SimpleEntry<Expre, Expre> pair = key_value_pair(tok);
        HashMap<Expre, Expre> output = new HashMap<>();
        output.put(pair.getKey(), pair.getValue());

        while(! currentIs(TokenType.R_CUR)){
            if( ! currentIs(TokenType.COMMA))
                Runtime.error("Expected ',' between Dict elements", tok.line, tok.file_name);
            advance();
            pair = key_value_pair(tok);
            output.put(pair.getKey(), pair.getValue());
        }

        advance();
        return output;
    }

    AbstractMap.SimpleEntry<Expre, Expre> key_value_pair(Token tok){
        Expre key = expression();
        if(! currentIs(TokenType.COLON))
            Runtime.error("key value pairs must be separated by ':'", tok.line, tok.file_name);
        advance();
        Expre value = expression();

        return new AbstractMap.SimpleEntry<Expre, Expre>(key, value);
        
    }


    void advance(){
        TokenType type = current.type;
        if(type.equals(TokenType.EOF))
            Runtime.error("cannot advance anymore, already reached EOF !", current.line, current.file_name);
        pos += 1;
        current = tokens.get(pos);
    }

    boolean currentIs(TokenType... allTypes){
        TokenType curType = current.type;
        for (TokenType type : allTypes)
            if(curType.equals(type))
                return true;
        return false;
        
    }

    Token peekNext(){
        return tokens.get(pos + 1);
    }


}